Cosmetic changes for visibility, fix time display, enforce song auto playing on clicking search result

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -25,7 +25,7 @@ body {
 }
 
 .details__title {
-  color: white;
+  color: black;
   margin: 0;
   padding: 50px 10px;
   text-align: center;
@@ -83,7 +83,7 @@ body {
 }
 
 .progress {
-  color: white;
+  color: black;
   margin-top: 100px;
   text-align: center;
 }
@@ -109,7 +109,7 @@ body {
 }
 
 footer {
-  color: white;
+  color: black;
   position: absolute;
   bottom: 0px;
   width: 100%;
